--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
         <section id="acerca">
             <div class="acerca-content">
                 <h2>Acerca de Nosotros</h2>
-                <p>Somos una empresa comprometida con la excelencia y la innovación. Nuestro objetivo es proporcionar
-                    soluciones de alta calidad que impulsen el éxito de nuestros clientes en la era digital.</p>
-                <p>Con años de experiencia y un equipo de expertos apasionados, estamos listos para enfrentar cualquier
-                    desafío y convertir tus visiones en realidad.</p>
+                <p>Somos un equipo de desarrolladores apasionados y comprometidos con la causa animal. Nuestro objetivo es crear soluciones tecnológicas que ayuden a salvar vidas, ofreciendo una plataforma accesible y eficaz para conectar personas con animales en estado vulnerable. Entendemos la importancia de cada vida y, por eso, trabajamos incansablemente para mejorar la experiencia de adopción, facilitar donaciones y apoyar a las organizaciones protectoras de animales.</p>
             </div>
         </section>
 
